--- a/muk_web_branding/i18n/de.po
+++ b/muk_web_branding/i18n/de.po
@@ -7,53 +7,56 @@ msgstr ""
 "Project-Id-Version: Odoo Server 12.0-20190522\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-06-25 13:34+0000\n"
-"PO-Revision-Date: 2019-06-25 13:34+0000\n"
-"Last-Translator: <>\n"
-"Language-Team: \n"
+"PO-Revision-Date: 2019-06-27 08:26+0000\n"
+"Last-Translator: MuK IT <admin@mukit.at>\n"
+"Language-Team: German <http://weblate.mukit.at/projects/web-12/"
+"muk_web_branding/de/>\n"
+"Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 3.7\n"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "<span class=\"o_form_label\">Brand</span>"
-msgstr ""
+msgstr "<span class=\"o_form_label\">Marke</span>"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "<span class=\"o_form_label\">Layout</span>"
-msgstr ""
+msgstr "<span class=\"o_form_label\">Layout</span>"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "<span class=\"o_form_label\">Notifications</span>"
-msgstr ""
+msgstr "<span class=\"o_form_label\">Benachrichtigungen</span>"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "<span class=\"o_form_label\">Palette</span>"
-msgstr ""
+msgstr "<span class=\"o_form_label\">Palette</span>"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "<span class=\"o_form_label\">Primary</span>"
-msgstr ""
+msgstr "<span class=\"o_form_label\">Primär</span>"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "<span class=\"o_form_label\">Secondary</span>"
-msgstr ""
+msgstr "<span class=\"o_form_label\">Sekundär</span>"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "<span class=\"o_form_label\">Text</span>"
-msgstr ""
+msgstr "<span class=\"o_form_label\">Text</span>"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Background"
-msgstr ""
+msgstr "Hintergrund"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
@@ -63,114 +66,114 @@ msgstr "Basis"
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Black"
-msgstr ""
+msgstr "Schwarz"
 
 #. module: muk_web_branding
 #: model:ir.model.fields,field_description:muk_web_branding.field_res_config_settings__branding_color_black
 msgid "Black Color"
-msgstr ""
+msgstr "Schwarze Farbe"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Brand"
-msgstr ""
+msgstr "Marke"
 
 #. module: muk_web_branding
 #: model:ir.model.fields,field_description:muk_web_branding.field_res_config_settings__branding_color_brand
 msgid "Brand Color"
-msgstr ""
+msgstr "Markenfarbe"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Brand Colors"
-msgstr ""
+msgstr "Markenfarben"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Client Colors"
-msgstr ""
+msgstr "Kundenfarben"
 
 #. module: muk_web_branding
 #: model:ir.model.fields,field_description:muk_web_branding.field_res_config_settings__branding_color_01
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Color 01"
-msgstr ""
+msgstr "Farbe 01"
 
 #. module: muk_web_branding
 #: model:ir.model.fields,field_description:muk_web_branding.field_res_config_settings__branding_color_02
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Color 02"
-msgstr ""
+msgstr "Farbe 02"
 
 #. module: muk_web_branding
 #: model:ir.model.fields,field_description:muk_web_branding.field_res_config_settings__branding_color_03
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Color 03"
-msgstr ""
+msgstr "Farbe 03"
 
 #. module: muk_web_branding
 #: model:ir.model.fields,field_description:muk_web_branding.field_res_config_settings__branding_color_04
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Color 04"
-msgstr ""
+msgstr "Farbe 04"
 
 #. module: muk_web_branding
 #: model:ir.model.fields,field_description:muk_web_branding.field_res_config_settings__branding_color_05
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Color 05"
-msgstr ""
+msgstr "Farbe 05"
 
 #. module: muk_web_branding
 #: model:ir.model.fields,field_description:muk_web_branding.field_res_config_settings__branding_color_06
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Color 06"
-msgstr ""
+msgstr "Farbe 06"
 
 #. module: muk_web_branding
 #: model:ir.model.fields,field_description:muk_web_branding.field_res_config_settings__branding_color_07
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Color 07"
-msgstr ""
+msgstr "Farbe 07"
 
 #. module: muk_web_branding
 #: model:ir.model.fields,field_description:muk_web_branding.field_res_config_settings__branding_color_08
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Color 08"
-msgstr ""
+msgstr "Farbe 08"
 
 #. module: muk_web_branding
 #: model:ir.model.fields,field_description:muk_web_branding.field_res_config_settings__branding_color_09
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Color 09"
-msgstr ""
+msgstr "Farbe 09"
 
 #. module: muk_web_branding
 #: model:ir.model.fields,field_description:muk_web_branding.field_res_config_settings__branding_color_10
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Color 10"
-msgstr ""
+msgstr "Farbe 10"
 
 #. module: muk_web_branding
 #: model:ir.model.fields,field_description:muk_web_branding.field_res_config_settings__branding_color_11
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Color 11"
-msgstr ""
+msgstr "Farbe 11"
 
 #. module: muk_web_branding
 #: model:ir.model.fields,field_description:muk_web_branding.field_res_config_settings__branding_color_12
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Color 12"
-msgstr ""
+msgstr "Farbe 12"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Color Palette"
-msgstr ""
+msgstr "Farbpalette"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Component Colors"
-msgstr ""
+msgstr "Komponentenfarben"
 
 #. module: muk_web_branding
 #: model:ir.model,name:muk_web_branding.model_res_config_settings
@@ -180,36 +183,36 @@ msgstr "Konfiguration "
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Danger"
-msgstr ""
+msgstr "Gefahr"
 
 #. module: muk_web_branding
 #: model:ir.model.fields,field_description:muk_web_branding.field_res_config_settings__branding_color_danger
 msgid "Danger Color"
-msgstr ""
+msgstr "Farbe der Gefahr"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Dark"
-msgstr ""
+msgstr "Dunkel"
 
 #. module: muk_web_branding
 #: model:ir.model.fields,field_description:muk_web_branding.field_res_config_settings__branding_color_dark
 msgid "Dark Color"
-msgstr ""
+msgstr "Dunkle Farbe"
 
 #. module: muk_web_branding
 #. openerp-web
 #: code:addons/muk_web_branding/static/src/xml/menu.xml:26
 #, python-format
 msgid "Developer mode"
-msgstr ""
+msgstr "Entwicklermodus"
 
 #. module: muk_web_branding
 #. openerp-web
 #: code:addons/muk_web_branding/static/src/xml/menu.xml:29
 #, python-format
 msgid "Developer mode (assets)"
-msgstr ""
+msgstr "Entwicklermodus (Assets)"
 
 #. module: muk_web_branding
 #. openerp-web
@@ -217,260 +220,260 @@ msgstr ""
 #: code:addons/muk_web_branding/static/src/js/chrome/menu.js:54
 #, python-format
 msgid "Developer mode is already activated"
-msgstr ""
+msgstr "Der Entwicklermodus ist bereits aktiviert."
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Error"
-msgstr ""
+msgstr "Fehler"
 
 #. module: muk_web_branding
 #: model:ir.model.fields,field_description:muk_web_branding.field_res_config_settings__branding_color_background
 msgid "Form Color"
-msgstr ""
+msgstr "Formularfarbe"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Gray 100"
-msgstr ""
+msgstr "Grau 100"
 
 #. module: muk_web_branding
 #: model:ir.model.fields,field_description:muk_web_branding.field_res_config_settings__branding_color_gray_100
 msgid "Gray 100 Color"
-msgstr ""
+msgstr "Grau 100 Farbe"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Gray 200"
-msgstr ""
+msgstr "Grau 200"
 
 #. module: muk_web_branding
 #: model:ir.model.fields,field_description:muk_web_branding.field_res_config_settings__branding_color_gray_200
 msgid "Gray 200 Color"
-msgstr ""
+msgstr "Grau 200 Farbe"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Gray 300"
-msgstr ""
+msgstr "Grau 300"
 
 #. module: muk_web_branding
 #: model:ir.model.fields,field_description:muk_web_branding.field_res_config_settings__branding_color_gray_300
 msgid "Gray 300 Color"
-msgstr ""
+msgstr "Grau 300 Farbe"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Gray 400"
-msgstr ""
+msgstr "Grau 400"
 
 #. module: muk_web_branding
 #: model:ir.model.fields,field_description:muk_web_branding.field_res_config_settings__branding_color_gray_400
 msgid "Gray 400 Color"
-msgstr ""
+msgstr "Grau 400 Farbe"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Gray 500"
-msgstr ""
+msgstr "Grau 500"
 
 #. module: muk_web_branding
 #: model:ir.model.fields,field_description:muk_web_branding.field_res_config_settings__branding_color_gray_500
 msgid "Gray 500 Color"
-msgstr ""
+msgstr "Grau 500 Farbe"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Gray 600"
-msgstr ""
+msgstr "Grau 600"
 
 #. module: muk_web_branding
 #: model:ir.model.fields,field_description:muk_web_branding.field_res_config_settings__branding_color_gray_600
 msgid "Gray 600 Color"
-msgstr ""
+msgstr "Grau 600 Farbe"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Gray 700"
-msgstr ""
+msgstr "Grau 700"
 
 #. module: muk_web_branding
 #: model:ir.model.fields,field_description:muk_web_branding.field_res_config_settings__branding_color_gray_700
 msgid "Gray 700 Color"
-msgstr ""
+msgstr "Grau 700 Farbe"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Gray 800"
-msgstr ""
+msgstr "Grau 800"
 
 #. module: muk_web_branding
 #: model:ir.model.fields,field_description:muk_web_branding.field_res_config_settings__branding_color_gray_800
 msgid "Gray 800 Color"
-msgstr ""
+msgstr "Grau 800 Farbe"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Gray 900"
-msgstr ""
+msgstr "Grau 900"
 
 #. module: muk_web_branding
 #: model:ir.model.fields,field_description:muk_web_branding.field_res_config_settings__branding_color_gray_900
 msgid "Gray 900 Color"
-msgstr ""
+msgstr "Grau 900 Farbe"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Gray Palette"
-msgstr ""
+msgstr "Graue Palette"
 
 #. module: muk_web_branding
 #: model:ir.model,name:muk_web_branding.model_ir_http
 msgid "HTTP Routing"
-msgstr ""
+msgstr "HTTP-Routing"
 
 #. module: muk_web_branding
 #. openerp-web
 #: code:addons/muk_web_branding/static/src/js/views/dashboard.js:50
 #, python-format
 msgid "I am using #%s - Awesome open source business apps."
-msgstr ""
+msgstr "Ich benutze #%s - Fantastische Open-Source-Geschäftsanwendungen."
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Info"
-msgstr ""
+msgstr "Info"
 
 #. module: muk_web_branding
 #: model:ir.model.fields,field_description:muk_web_branding.field_res_config_settings__branding_color_info
 msgid "Info Color"
-msgstr ""
+msgstr "Info-Farbe"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Light"
-msgstr ""
+msgstr "Licht"
 
 #. module: muk_web_branding
 #: model:ir.model.fields,field_description:muk_web_branding.field_res_config_settings__branding_color_light
 msgid "Light Color"
-msgstr ""
+msgstr "Lichtfarbe"
 
 #. module: muk_web_branding
 #: model:ir.model.fields,field_description:muk_web_branding.field_res_config_settings__branding_color_lightsecondary
 msgid "Light Secondary Color"
-msgstr ""
+msgstr "Helle Sekundärfarbe"
 
 #. module: muk_web_branding
 #. openerp-web
 #: code:addons/muk_web_branding/static/src/js/views/dashboard.js:54
 #, python-format
 msgid "Mantained by %s"
-msgstr ""
+msgstr "Verwaltet von %s"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Muted"
-msgstr ""
+msgstr "Stummgeschaltet"
 
 #. module: muk_web_branding
 #: model:ir.model.fields,field_description:muk_web_branding.field_res_config_settings__branding_color_muted
 msgid "Muted Color"
-msgstr ""
+msgstr "Gedämpfte Farbe"
 
 #. module: muk_web_branding
 #: model:ir.model.fields,field_description:muk_web_branding.field_res_config_settings__branding_color_notification_error
 msgid "Notification Error Color"
-msgstr ""
+msgstr "Benachrichtigungsfehler Farbe"
 
 #. module: muk_web_branding
 #: model:ir.model.fields,field_description:muk_web_branding.field_res_config_settings__branding_color_notification_info
 msgid "Notification Info Color"
-msgstr ""
+msgstr "Farbe der Benachrichtigungsinfo"
 
 #. module: muk_web_branding
 #. openerp-web
 #: code:addons/muk_web_branding/static/src/js/chrome/bus.js:33
 #, python-format
 msgid "Permission denied"
-msgstr ""
+msgstr "Erlaubnis verweigert"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Primary"
-msgstr ""
+msgstr "Primär"
 
 #. module: muk_web_branding
 #: model:ir.model.fields,field_description:muk_web_branding.field_res_config_settings__branding_color_primary
 msgid "Primary Color"
-msgstr ""
+msgstr "Primärfarbe"
 
 #. module: muk_web_branding
 #: model:ir.model.fields,field_description:muk_web_branding.field_res_config_settings__branding_color_secondary
 msgid "Secondary Color"
-msgstr ""
+msgstr "Sekundäre Farbe"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Set the brand color"
-msgstr ""
+msgstr "Setzt die Farbe der Marke"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Set the color palette"
-msgstr ""
+msgstr "Einstellen der Farbpalette"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Set the layout colors"
-msgstr ""
+msgstr "Setzen der Layoutfarben"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Set the primary color"
-msgstr ""
+msgstr "Einstellen der Primärfarbe"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Set the secondary colors"
-msgstr ""
+msgstr "Einstellen der Sekundärfarben"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Set the text colors"
-msgstr ""
+msgstr "Setzt die Textfarben"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Success"
-msgstr ""
+msgstr "Erfolg"
 
 #. module: muk_web_branding
 #: model:ir.model.fields,field_description:muk_web_branding.field_res_config_settings__branding_color_success
 msgid "Success Color"
-msgstr ""
+msgstr "Erfolgsfarbe"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "System Colors"
-msgstr ""
+msgstr "Systemfarben"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Text"
-msgstr ""
+msgstr "Text"
 
 #. module: muk_web_branding
 #: model:ir.model.fields,field_description:muk_web_branding.field_res_config_settings__branding_color_text
 msgid "Text Color"
-msgstr ""
+msgstr "Textfarbe"
 
 #. module: muk_web_branding
 #. openerp-web
 #: code:addons/muk_web_branding/static/src/xml/dashboard.xml:26
 #, python-format
 msgid "Version"
-msgstr ""
+msgstr "Version"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
@@ -480,32 +483,31 @@ msgstr "Ansicht"
 #. module: muk_web_branding
 #: model:ir.model.fields,field_description:muk_web_branding.field_res_config_settings__branding_color_view
 msgid "View Color"
-msgstr ""
+msgstr "Farbe anzeigen"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "Warning"
-msgstr ""
+msgstr "Warnung"
 
 #. module: muk_web_branding
 #: model:ir.model.fields,field_description:muk_web_branding.field_res_config_settings__branding_color_warning
 msgid "Warning Color"
-msgstr ""
+msgstr "Warnfarbe"
 
 #. module: muk_web_branding
 #: model_terms:ir.ui.view,arch_db:muk_web_branding.res_config_settings_view_form
 msgid "White"
-msgstr ""
+msgstr "Weiß"
 
 #. module: muk_web_branding
 #: model:ir.model.fields,field_description:muk_web_branding.field_res_config_settings__branding_color_white
 msgid "White Color"
-msgstr ""
+msgstr "Weiße Farbe"
 
 #. module: muk_web_branding
 #. openerp-web
 #: code:addons/muk_web_branding/static/src/js/chrome/bus.js:33
 #, python-format
 msgid "Yay, push notifications are enabled!"
-msgstr ""
-
+msgstr "Ja, Push-Benachrichtigungen sind aktiviert!"
